# essh

./: Cargo.toml  LICENSE  README.md  SPEC.md  demo.tape  essh.sh
scripts/: generate_demo_gif.py
src/: event.rs  main.rs
src/audit/: mod.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/diagnostics/: mod.rs
src/fleet/: mod.rs
src/monitor/: collector.rs  history.rs  mod.rs  parser.rs
src/notify/: mod.rs
src/portfwd/: mod.rs
src/session/: manager.rs  mod.rs
src/ssh/: mod.rs
src/tui/: command_palette.rs  dashboard.rs  filebrowser_view.rs  help.rs  host_monitor.rs  mod.rs  portfwd_view.rs  session_view.rs  widgets.rs
tests/: mock_ssh_server_e2e.rs
