[package]
name = "essh"
version = "0.2.3"
edition = "2021"
description = "Enterprise SSH client with concurrent sessions, real-time host diagnostics, and a Netwatch-inspired TUI"
license = "MIT"
repository = "https://github.com/matthart1983/essh"
homepage = "https://github.com/matthart1983/essh"
readme = "README.md"
keywords = ["ssh", "tui", "terminal", "devops", "monitoring"]
categories = ["command-line-utilities", "network-programming"]
authors = ["Matt Hartley <matthew.t.hartley@gmail.com>"]
exclude = ["target/", ".git/"]

[[bin]]
name = "essh"
path = "src/main.rs"

[dependencies]
# SSH
russh = "0.57"
russh-keys = "0.46"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
base64 = "0.22"
async-trait = "0.1"
anyhow = "1"
shellexpand = "3"
scopeguard = "1"
vt100 = "0.16"
regex = "1"

[dev-dependencies]
tempfile = "3"
